--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
         "AGREGAR",
         "blit",
         "colliderect",
+        "DINNO",
         "ESTATICAS",
+        "freesansbold",
         "freesansbols",
         "KEYDOWN",
         "NUBES",
