--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "freesansbold",
         "freesansbols",
         "KEYDOWN",
+        "lifes",
         "NUBES",
         "pygame",
         "TAREA"
